--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <script type="text/javascript" src="http://api.nongsaro.go.kr/js/openapi_nongsaro.js"></script>
 	
 <script type="text/javascript">
-	nongsaroOpenApiRequest.apiKey = "발급받은인증키를삽입하세요";//Api Key  - 발급받은 인증키로변경
+	nongsaroOpenApiRequest.apiKey = "20230307SIAHJTSZWKTV1QB7FVBSZQ";//Api Key  - 발급받은 인증키로변경
 	nongsaroOpenApiRequest.serviceName = "pesticideSalePrice";//서비스명
 	nongsaroOpenApiRequest.operationName = "yearGubunList";//오퍼레이션명 - nongsaroApiLoadingArea 영역에 로딩할 오퍼레이션 
 	nongsaroOpenApiRequest.htmlArea="nongsaroApiLoadingArea";//첫번째로 HTML을 로딩할영역 
-	nongsaroOpenApiRequest.callback = "http://yourDomain.go.kr/ajax_local_callback.jsp";//크로스 도메인 처리를 위한 콜백페이지 - 샘플소스에 있는 콜백페이지를 서버에 올리고 올린 경로로 수정
+	nongsaroOpenApiRequest.callback = "https://soksokyi.github.io/pesticideSalePrice//ajax_local_callback.jsp";//크로스 도메인 처리를 위한 콜백페이지 - 샘플소스에 있는 콜백페이지를 서버에 올리고 올린 경로로 수정
 </script>
 
 </head>
