--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="ko">
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <meta content="no-cache" http-equiv="pragma">
 <title>농약 판매가격 Open API Ajax 샘플 페이지</title>
 
 <!-- 공통 CSS, JS 선언 -->
-<link href="http://api.nongsaro.go.kr/css/api.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="http://api.nongsaro.go.kr/js/framework.js"></script>	
-<script type="text/javascript" src="http://api.nongsaro.go.kr/js/openapi_nongsaro.js"></script>
+<link href="https://api.nongsaro.go.kr/css/api.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="https://api.nongsaro.go.kr/js/framework.js"></script>	
+<script type="text/javascript" src="https://api.nongsaro.go.kr/js/openapi_nongsaro.js"></script>
 	
 <script type="text/javascript">
 	nongsaroOpenApiRequest.apiKey = "20230307SIAHJTSZWKTV1QB7FVBSZQ";//Api Key  - 발급받은 인증키로변경
