--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <title>농약 판매가격 Open API Ajax 샘플 페이지</title>
 
 <!-- 공통 CSS, JS 선언 -->
-<link href="https://api.nongsaro.go.kr/css/api.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="https://api.nongsaro.go.kr/js/framework.js"></script>	
-<script type="text/javascript" src="https://api.nongsaro.go.kr/js/openapi_nongsaro.js"></script>
+<link href="http://api.nongsaro.go.kr/css/api.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="http://api.nongsaro.go.kr/js/framework.js"></script>	
+<script type="text/javascript" src="http://api.nongsaro.go.kr/js/openapi_nongsaro.js"></script>
 	
 <script type="text/javascript">
 	nongsaroOpenApiRequest.apiKey = "20230307SIAHJTSZWKTV1QB7FVBSZQ";//Api Key  - 발급받은 인증키로변경
