--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="ko">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko">
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <meta content="no-cache" http-equiv="pragma">
